[tool.poetry]
name = "ecs"
version = "0.1.0"
description = ""
authors = ["Bada-S <jamessopkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
prefect = {version = "^0.15.13", extras = ["aws"]}
boto3 = "^1.21.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
